8169328: Change hotspot tests to use new --add-opens options Summary: Replace --add-exports-private with --add-opens, replace :private in @modules with :open Reviewed-by: hseigel